WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141802
bmalloc should implement malloc introspection (to stop false-positive leaks when MallocStackLogging is off)
https://bugs.webkit.org/show_bug.cgi?id=141802
Summary
bmalloc should implement malloc introspection (to stop false-positive leaks w...
Geoffrey Garen
Reported
2015-02-19 11:12:35 PST
bmalloc should implement malloc introspection (to stop false-positive leaks when MallocStackLogging is off)
Attachments
Patch
(13.85 KB, patch)
2015-02-19 11:22 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(1.81 KB, patch)
2015-02-19 13:34 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(3.69 KB, patch)
2015-02-20 11:19 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(1.79 KB, patch)
2015-03-03 14:50 PST
,
Geoffrey Garen
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-02-19 11:22:11 PST
Created
attachment 246900
[details]
Patch
WebKit Commit Bot
Comment 2
2015-02-19 11:24:54 PST
Attachment 246900
[details]
did not pass style-queue: ERROR: Source/bmalloc/bmalloc/Zone.cpp:26: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/bmalloc/bmalloc/Zone.cpp:27: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/bmalloc/bmalloc/Zone.cpp:46: type_mask is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/bmalloc/bmalloc/Zone.cpp:46: zone_address is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 4 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2015-02-19 11:26:55 PST
> ERROR: Source/bmalloc/bmalloc/Zone.cpp:46: type_mask is incorrectly named. > Don't use underscores in your identifier names. > [readability/naming/underscores] [4] > ERROR: Source/bmalloc/bmalloc/Zone.cpp:46: zone_address is incorrectly > named. Don't use underscores in your identifier names. > [readability/naming/underscores] [4]
I did this on purpose. We're implementing a delegation API, and I want our signature to match the signature declared in the header exactly.
Andreas Kling
Comment 4
2015-02-19 11:41:01 PST
Comment on
attachment 246900
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=246900&action=review
r=me
> Source/bmalloc/bmalloc/Zone.cpp:54 > + auto begin = remoteZone.superChunks().begin(); > + auto end = remoteZone.superChunks().end(); > + > + for (auto it = begin; it != end; ++it) {
Could we use range for here?
> Source/bmalloc/bmalloc/Zone.h:39 > + // Enough capacity to track a 16GB heap, so probably enough for anything. > + static const size_t capacity = 512;
Let's go a bit bigger here. 64GB?
Geoffrey Garen
Comment 5
2015-02-19 12:43:02 PST
Committed
r180359
: <
http://trac.webkit.org/changeset/180359
>
Geoffrey Garen
Comment 6
2015-02-19 13:34:09 PST
Reopening to attach new patch.
Geoffrey Garen
Comment 7
2015-02-19 13:34:10 PST
Created
attachment 246914
[details]
Patch
Andreas Kling
Comment 8
2015-02-19 13:34:35 PST
Comment on
attachment 246914
[details]
Patch rs=me
Geoffrey Garen
Comment 9
2015-02-19 13:38:19 PST
Committed
r180363
: <
http://trac.webkit.org/changeset/180363
>
Csaba Osztrogonác
Comment 10
2015-02-19 14:10:10 PST
(In reply to
comment #9
)
> Committed
r180363
: <
http://trac.webkit.org/changeset/180363
>
It caused serious regression (at least) on Apple Yosemite bot:
https://build.webkit.org/builders/Apple%20Yosemite%20Release%20WK2%20%28Tests%29/builds/2973
WebKit Commit Bot
Comment 11
2015-02-19 16:37:52 PST
Re-opened since this is blocked by
bug 141814
David Kilzer (:ddkilzer)
Comment 12
2015-02-20 10:47:45 PST
<
rdar://problem/19799874
>
Geoffrey Garen
Comment 13
2015-02-20 11:19:20 PST
Created
attachment 246977
[details]
Patch
Andreas Kling
Comment 14
2015-02-20 11:21:56 PST
Comment on
attachment 246977
[details]
Patch A-ha!
Geoffrey Garen
Comment 15
2015-02-20 11:28:51 PST
Committed
r180430
: <
http://trac.webkit.org/changeset/180430
>
Stephanie Lewis
Comment 16
2015-02-24 19:04:01 PST
Rolled out in
http://trac.webkit.org/changeset/180604
until we can figure out why the PLT is crashing.
rdar://problem/19948015
Geoffrey Garen
Comment 17
2015-03-03 13:58:23 PST
Committed
r180954
: <
http://trac.webkit.org/changeset/180954
>
Geoffrey Garen
Comment 18
2015-03-03 14:49:59 PST
Reopening to attach new patch.
Geoffrey Garen
Comment 19
2015-03-03 14:50:02 PST
Created
attachment 247797
[details]
Patch
Geoffrey Garen
Comment 20
2015-03-03 15:28:07 PST
Committed
r180960
: <
http://trac.webkit.org/changeset/180960
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug